@@ -1,4 +1,4 @@
-SUBDIRS = libgnomeui po intl
+SUBDIRS = libgnomeui demos po intl
 
 gnomeincludedir=$(includedir)/gnome/$(GNOME_INTERFACE_VERSION)
 gnomeinclude_HEADERS = gnome.h
