@@ -101,6 +101,7 @@ intl/Makefile
 libgnomeui/Makefile
 libgnomeui/libgnomeui-2.0.pc
 libgnomeui/pixmaps/Makefile
+demos/Makefile
 ])
 
 cat $srcdir/message-of-doom
